<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/colorGray"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="150dp"
        android:paddingTop="30dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_box"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:padding="34dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/str1"
            android:textSize="@dimen/st1"
            android:textColor="@color/colorBlack" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/str2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/str3"
            android:textSize="@dimen/st1"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/str4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="@dimen/st1"
            android:text="@string/str5"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/str6"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>